@@ -27,6 +27,7 @@ import net.mcreator.element.ModElementType;
 import net.mcreator.element.converter.ConverterUtils;
 import net.mcreator.element.converter.IConverter;
 import net.mcreator.element.parts.BiomeEntry;
+import net.mcreator.element.parts.GenerationStep;
 import net.mcreator.element.parts.procedure.Procedure;
 import net.mcreator.element.types.Dimension;
 import net.mcreator.element.types.Feature;
@@ -77,11 +78,11 @@ public class StructureToFeatureConverter implements IConverter {
 
 		String spawnLocation = definition.get("spawnLocation").getAsString();
 		if (spawnLocation.equals("Air")) {
-			feature.generationStep = "RAW_GENERATION";
+			feature.generationStep = new GenerationStep(workspace, "RAW_GENERATION");
 		} else if (spawnLocation.equals("Underground")) {
-			feature.generationStep = "UNDERGROUND_STRUCTURES";
+			feature.generationStep = new GenerationStep(workspace, "UNDERGROUND_STRUCTURES");
 		} else {
-			feature.generationStep = "SURFACE_STRUCTURES";
+			feature.generationStep = new GenerationStep(workspace, "SURFACE_STRUCTURES");
 		}
 
 		// Copy the generation condition
@@ -98,9 +99,9 @@ public class StructureToFeatureConverter implements IConverter {
 		if (spawnLocation.equals("Ground"))
 			spawnYOffset -= 1; // Old ground structures were 1 block lower (#4917)
 
-		spawnXOffset = Math.max(-47, Math.min(47, spawnXOffset));
-		spawnYOffset = Math.max(-47, Math.min(47, spawnYOffset));
-		spawnZOffset = Math.max(-47, Math.min(47, spawnZOffset));
+		spawnXOffset = Math.clamp(spawnXOffset, -47, 47);
+		spawnYOffset = Math.clamp(spawnYOffset, -47, 47);
+		spawnZOffset = Math.clamp(spawnZOffset, -47, 47);
 
 		boolean randomlyRotateStructure =
 				!definition.has("randomlyRotateStructure") || definition.get("randomlyRotateStructure").getAsBoolean();
@@ -283,7 +284,7 @@ public class StructureToFeatureConverter implements IConverter {
 		xml.append("<block type=\"placement_biome_filter\"></block>");
 
 		// Close all the remaining blocks
-		xml.append("</next></block>".repeat(blocksToClose));
+		xml.repeat("</next></block>", blocksToClose);
 
 		return xml.toString();
 	}
